# harmonics-radius-index

./: .gitignore  README.md  analyze.py  hri95.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publisher.yaml  reviewer.yaml
core/: analyze.py  image.py  image_holder.py  image_preperation_factory.py  preprocessors.py  settings.py  sr_analyzer.py  utils.py
core/images/: base_image.py  bicubic_image.py  linear_image.py  original_image.py  small_image.py  super_resolution_image.py  zero_order_image.py
core/metrics/: __init__.py  harmonics_radius.py  interface_metric.py  mean_squared_error.py  peak_signal_to_noise_ratio.py  structural_similarity_index.py
core/transform_strategies/: base_transform.py  fourier_transform.py
examples/: SSIM_drawback_shower.py  all_calculator.py  blacked_comparison.py  color_change_comparison.py  comparison_linear_bicubic.py  find_phases.py  fourier_magnitudes_threshold.py  frame_rate_calculator.py  generate_fft.py  generate_images.py  harmonic_radius.py  images_next_to_eachother.py  linear_bicubic_hri_calculator.py  linear_bicubic_neighbour_generator.py  localized_hri95.py  mirror_comparison.py  real_esrgan_vs_hat_calculator.py  select_images.py  select_sub_image_compare.py
harmonicsradius/: hri95.py  image.py  settings.py  sr_analyzer.py  utils.py
harmonicsradius/metrics/: __init__.py  harmonics_radius.py  interface_metric.py  mean_squared_error.py  peak_signal_to_noise_ratio.py  structural_similarity_index.py
scripts/: SSIM_drawback_shower.py  color_change_comparison.py  comparison_linear_bicubic.py  frame_rate_calculator.py  generate_fft.py  generate_images.py  harmonic_radius.py  images_next_to_eachother.py  linear_bicubic_neighbour_generator.py  mirror_comparison.py
